# firefly-hal

./: Cargo.toml  README.md  Taskfile.yml
.cargo/: config.toml
src/: embedded.rs  errors.rs  gamepad.rs  gamepad_android.rs  hosted.rs  lib.rs  shared.rs  web.rs
