[package]
name = "firefly-hal"
version = "0.1.0"
rust-version = "1.82.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
wasmi = { version = "0.40.0", default-features = false }

# hosted
[target.'cfg(not(target_os = "none"))'.dependencies]
embedded-io = { version = "0.6.1", features = ["std"] }
gilrs = "0.11.0"
rodio = { version = "0.20.1", default-features = false }
hound = "3.5.1"

# web
[target.'cfg(target_family = "wasm")'.dependencies]
embedded-io = { version = "0.6.1", features = ["std"] }
gilrs = "0.11.0"
rust-embed = { version = "8.0.0", features = ["debug-embed"] }
vfs = { version = "0.12.0", features = ["embedded-fs"] }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.69", features = ["Window", "Performance"] }

# embedded
[target.'cfg(target_os = "none")'.dependencies]
embedded-hal-bus = { version = "0.2.0", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }
embedded-sdmmc = { git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs", default-features = false }
esp-hal = { version = "0.22.0", features = ["esp32s3"] }
esp-println = { version = "0.12.0", features = ["esp32s3"] }
esp-wifi = { version = "0.11.0", features = ["esp32s3", "esp-now"] }
fugit = { version = "0.3.7" }
