[package]
name = "firefly-hal"
version = "0.1.0"
rust-version = "1.82.0"
edition = "2021"

[dependencies]
firefly-types = { version = "0.6.1" }
postcard = "1.1.3"
wasmi = { version = "0.46.0", default-features = false }

# hosted
[target.'cfg(not(target_os = "none"))'.dependencies]
embedded-io = { version = "0.6.1", features = ["std"] }
gilrs = "0.11.0"
rodio = { version = "0.20.1", default-features = false }
hound = "3.5.1"
rand = "0.9.0"

# web
[target.'cfg(target_family = "wasm")'.dependencies]
embedded-io = { version = "0.6.1", features = ["std"] }
gilrs = "0.11.0"
rust-embed = { version = "8.0.0", features = ["debug-embed"] }
vfs = { version = "0.12.0", features = ["embedded-fs"] }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.69", features = ["Window", "Performance"] }

# embedded
[target.'cfg(target_os = "none")'.dependencies]
embedded-hal-bus = { version = "0.3.0", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }
# A temporary fork of the latest dev version of embedded-sdmmc.
# We'll switch to upstream when they push to crate the version >0.8.1.
embedded_sdmmc = { version = "0.8.2", default-features = false, package = "embedded-sdmmc-dev" }
esp-hal = { version = "1.0.0-beta.1", features = ["esp32s3", "unstable"] }
embedded-hal = { version = "1.0.0" }
cobs = { version = "0.4.0", default-features = false }
micromath = { version = "2.1.0", default-features = false }
